css/styleGuide.css
/**
 * Customize style guide for NeatStreet App
 */
body {
    font-family: 'Lato', sans-serif;
    font-style: normal;
}

#logo {
    height: 300px;
    width: 300px;
    color: #FF6F00
}

nav.navbar, .navbar-default {
    background-color: #2990ea;
}

.navbar-default {
    background-image: none;
    border: none;
    border-radius: 0;
}

.navbar-default .navbar-nav > li > a {
    color: white;
}

@media (max-width: 767px) {
    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
        color: white;
    }
}

@media (min-width: 767px) {
    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
        color: black;
    }
}

.navbar-default .navbar-brand {
    color: white;
}

.navbar-default .navbar-toggle {
    border-color: white;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: white;
}

.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
    background-color: transparent;
}

.navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
    color: white;
    background-color: transparent;
}

.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
    color: white;
    background-color: transparent;
}

.dropdown-item {
    color: white;
}

.ns-blue {
    background-color: #2990ea;
}

.ns-orange {
    background-color: #ff9747;
}

 .black {
     background-color: black;
 }

 .grey {
    background-color: #666c70;
 }

 .text-white {
     color: #ffffff;
 }

.thumbnail {
    padding: 0.35rem;
    background-color: #fff;
    border: 2px solid #dee2e6;
    border-radius: 0.35rem;
    height: 250px;
    width: 250px;
}

.img-thumbnail {
    padding: 0.35rem;
    background-color: #fff;
    border: 1px solid #dee2e6;
    border-radius: 0.35rem;
    max-width: 100%;
    height: auto;
}

.img-thumbnail:hover {
    opacity: 0.5;
}

.tooltip {
    position: relative;
    display: inline-block;
    border-bottom: 1px dotted black;
}

.tooltip .tooltiptext {
    visibility: hidden;
    width: 120px;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    bottom: 150%;
    left: 50%;
    margin-left: -60px;
}

.tooltip .tooltiptext::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border: 5px solid transparent;
    border-top-color: black;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
}

.portfolio-box {
    position: relative;
    display: block;
    max-width: 120px;
    margin: 0 auto;
}

.portfolio-box .portfolio-box-caption {
    position: absolute;
    bottom: 0;
    display: block;
    width: 100%;
    height: 100%;
    text-align: center;
    opacity: 0;
    color: #fff;
    background: rgba(240, 95, 64, 0.9);
    -webkit-transition: all 0.2s;
    transition: all 0.2s;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
    position: absolute;
    top: 50%;
    width: 100%;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    text-align: center;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
    padding: 0 15px;
    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
    font-size: 14px;
    font-weight: 600;
    text-transform: uppercase;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
    font-size: 18px;
}

.portfolio-box:hover .portfolio-box-caption {
    opacity: 1;
}

.portfolio-box:focus {
    outline: none;
}

@media (min-width: 768px) {
    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
        font-size: 16px;
    }
    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
        font-size: 22px;
    }
}

.container {
    width: 100%;
    padding-right: 15px;
    padding-left: 5px;
    margin-right: auto;
    margin-left: auto;
}

.container-fluid {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

.img-container {
    width: 250px;
    height: 200px;
}

/* resize images */
.img-container img {
    width: 100%;
    height: auto;
}

.img-caption {
    opacity: 0.5;
    background-color: gray;
    color: white;
}

/* Top left text */
.top-left {
    position: absolute;
    top: 8px;
    left: 20px;
}

.badge-orange {
    background-color: orange;
}

.badge-blue {
    background-color: #2990ea;
}

.badge-peach {
    background-color: peachpuff;
}

.dropdown.dropdown-lg .dropdown-menu {
    margin-top: -1px;
    padding: 6px 20px;
}
.input-group-btn .btn-group {
    display: flex !important;
}
.btn-group .btn {
    border-radius: 0;
    margin-left: -1px;
}
.btn-group .btn:last-child {
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
}
.btn-group .form-horizontal .btn[type="submit"] {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}
.form-horizontal .form-group {
    margin-left: 0;
    margin-right: 0;
}
.form-group .form-control:last-child {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}

@media screen and (min-width: 768px) {
    #adv-search {
        width: 500px;
        margin: 0 auto;
    }
    .dropdown.dropdown-lg {
        position: static !important;
    }
    .dropdown.dropdown-lg .dropdown-menu {
        min-width: 500px;
    }
}

